<resources>
    <string name="app_name">CompanyController</string>
    <string name="title_register">Создать аккаунт</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="rules">Начальник</string>
    <string name="btn_login"><u>Есть аккаунт? Войти</u></string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login_title">ChessTV</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="tv_btn_register"><u>Зарегистрироваться</u></string>
    <string name="login">Войти</string>
    <string name="homepage">Главная</string>
    <string name="streams">Стримы</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage_title">Добро пожаловать!</string>
    <string name="user_name">User Name</string>
    <string name="user_description">Участник с 23 июля 2021</string>
    <string name="soon">Раздел в разработке</string>
    <string name="example_text_profile">Сообщения</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="read_more"><u>Читать далее</u></string>
    <string name="example_date">Вчера, 22:19</string>
    <string name="change_task">Изменить задание</string>
    <string name="add_user">Добавить человека</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="delete_user">Удалить человека</string>
    <string name="rename">Переименовать группу</string>
    <string name="set_the_lead">Назначить руководителя</string>
    <string name="save_changes">Сохранить изменения?</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="patronymic">Отчество</string>
    <string name="users">Работники</string>
    <string name="groups">Группы</string>
    <string name="my_group">Моя группа</string>
    <string name="group_name">Название группы</string>
    <string name="group_task">Задание</string>
    <string name="users_in_group">Работники:</string>
    <string name="leader">Руководитель:</string>
    <string name="save_group">Сохранить группу?</string>
    <string name="finish_task">Выполнил задание</string>
    <string name="request_call">Запросить звонок</string>
    <string name="messages">Сообщения от работников</string>
    <string name="my_messages">Мои сообщения</string>
    <string name="register_as_superuser">Зарегистрироваться как начальник</string>
</resources>